<resources>
    <string name="mine_title">我的</string>
    <string name="mine_login">登录</string>
    <string name="mine_register">注册</string>
    <string name="mine_logout">退出登录</string>
    <string name="mine_order_setting">订单</string>
    <string name="mine_security_setting">账号与安全</string>
    <string name="mine_language_setting">语言设置</string>
    <string name="mine_assist_setting">帮助中心</string>
    <string name="mine_report_setting">意见反馈</string>
    <string name="mine_about_setting">版本升级</string>

    <string name="mine_hox_dialog_title">提示</string>
    <string name="mine_hox_dialog_ok">确认</string>
    <string name="mine_hox_dialog_cancel">取消</string>
    <string name="mine_security_setting_browser">账号与安全相关设置请前往 操作</string>

    <string name="mine_app_version_update">"%1$s" 升级提示</string>
    <string name="mine_app_version_dlg_later">稍后再说</string>
    <string name="mine_app_version_dlg_now">立即升级</string>
    <string name="mine_app_version_display">版本 "%1$s"</string>
    <string name="mine_app_version_latest_tips">当前已是最新版本</string>

</resources>
